[project]
name = "tool_pattern_agent"
version = "0.1.0"
authors = [
    { name="Priscila Santos", email="priscila.olimpia@gmail.com" },
]
description = "An AI agent that leverages external tools to perform actions and answer questions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tool_pattern_agent*"]